--- a/posts/DH_140_Final.ipynb
+++ b/posts/DH_140_Final.ipynb
@@ -347,7 +347,7 @@
    "id": "488e9565",
    "metadata": {},
    "source": [
-    "The chode above reads in a dataset of literature and creates a new column to count the number of times the word \"time\" appears in each book file. It then filters the dataframe to only include books published between 1532 and 1902, groups the filtered dataframe by year, and sums the time counts. Finally, it creates a histogram of the time count over the years using matplotlib. The histogram shows the frequency of the word \"time\" in novels published from 1532 to 1902.\n",
+    "The code above reads in a dataset of literature and creates a new column to count the number of times the word \"time\" appears in each book file. It then filters the dataframe to only include books published between 1532 and 1902, groups the filtered dataframe by year, and sums the time counts. Finally, it creates a histogram of the time count over the years using matplotlib. The histogram shows the frequency of the word \"time\" in novels published from 1532 to 1902.\n",
     "\n",
     "\n",
     "\n"
